@@ -124,6 +124,12 @@ STREAM: 2.0
         int modifiers,
         int completionStart,
         int completionEnd);
+  * Search for field read and field write references. Two new constants have been added
+    on IJavaSearchConstants to be used when creating a field reference search pattern:
+    - READ_REFERENCES: the search results contain only read access to a field.
+    - WRITE_REFERENCES: the search results contain only write access to a field.
+    Note that if REFERENCES is used, then search results contain both read and write
+    accesss to a field.
   
   PRs Fixed in this Release
   ================================================================================
